--- a/index.html
+++ b/index.html
@@ -18,15 +18,23 @@
     <main>
       <section class="profile">
         <div class="profile__user">
-          <img
-            class="profile__avatar"
-            src="./images/avatar.jpg"
-            alt="Фото профиля"
-          />
+          <div class="profile__avatar-container">
+            <img
+              class="profile__avatar"
+              src="./images/avatar.jpg"
+              alt="Фото профиля"
+            />
+            <button
+              type="submit"
+              class="profile__avatar-button"
+              id="avatar-button"
+              aria-label="изменить аватар"
+            ></button>
+          </div>
           <div class="profile__info">
             <div class="profile__name">
               <h1 class="profile__title">Жак-Ив Кусто</h1>
-              <button type="button" class="profile__edit-button"></button>
+              <button type="submit" class="profile__edit-button"></button>
             </div>
             <p class="profile__subtitle">Исследователь океана</p>
           </div>
@@ -54,7 +62,7 @@
     </template>
 
     <!--Попап редактирования профиля-->
-    <section class="popup popup_edit">
+    <section class="popup popup_edit" id="popup-profile">
       <div class="popup__container">
         <button
           class="popup__close-icon"
@@ -62,54 +70,112 @@
           aria-label="Закрытие"
         ></button>
         <h2 class="form__text">Редактировать профиль</h2>
-        <form class="form popup__form" name="PofileForm">
-          <fieldset class="form__info" id="form-edit">
+        <form class="form popup__form" name="form__profile" novalidate>
+          <fieldset class="form__info form__about" id="form-edit">
             <input
               class="form__input form__input_name"
-              id="user-name"
+              id="name"
               type="text"
-              name="Username"
+              name="name"
+              value=""
               placeholder="Жак-Ив Кусто"
+              minlength="2"
+              maxlength="40"
+              pattern="^[a-zA-Zа-яёА-ЯЁ\s-]+$"
+              data-error-message="Разрешены только латинские и кириллические буквы"
+              required
             />
+            <span class="form__input-error name-error"></span>
             <input
               class="form__input form__input_search"
               name="search"
               type="text"
-              id="user-job"
+              id="about"
+              value=""
               placeholder="Исследователь океана"
+              minlength="2"
+              maxlength="200"
+              pattern="^[a-zA-Zа-яёА-ЯЁ\s-]+$"
+              data-error-message="Разрешены только латинские и кириллические буквы"
+              required
             />
+            <span class="form__input-error about-error"></span>
           </fieldset>
           <button class="form__save-button" type="submit">Сохранить</button>
         </form>
       </div>
     </section>
-    <!-- добавляем картинки -->
-    <section class="popup popup_add">
+
+    <!-- новое место -->
+    <!-- id="UserName"
+    id="linkImg" -->
+    <section class="popup popup_add" id="popup-picture">
       <div class="popup__container">
         <button class="popup__close-icon" type="button"></button>
-        <form class="form form-add" name="PofileForm">
+        <form class="form-add form" name="form__profile" novalidate>
           <h2 class="form__text">Новое место</h2>
-          <fieldset class="form__info">
+          <fieldset class="form__info form__about">
             <input
               class="form__input form__input_name"
-              id="UserName"
+              id="title"
               type="text"
-              name="Username"
+              name="picture"
+              value=""
               placeholder="Название"
+              minlength="2"
+              maxlength="30"
+              required
             />
-
+            <span class="form__input-error title-error"></span>
             <input
               class="form__input form__input_search"
-              id="linkImg"
-              name="search"
-              type="text"
+              type="url"
+              id="link"
+              name="link"
+              value=""
               placeholder="Ссылка на картинку"
+              required
             />
+            <span class="form__input-error link-error"></span>
           </fieldset>
+
           <button class="form__save-button" type="submit">Сохранить</button>
         </form>
       </div>
     </section>
+
+    <div class="popup popup_avatar" id="popup-avatar">
+      <div class="popup__container">
+        <button
+          id="avatar-close-button"
+          type="button"
+          class="popup__close-icon"
+        ></button>
+        <form name="ava" class="form form__add" id="avatar-form" novalidate>
+          <h2 class="form__text">Обновить аватар</h2>
+          <label class="form__field">
+            <input
+              name="avatar"
+              class="form__input form__input-avatar"
+              id="avatar-input"
+              type="url"
+              placeholder="Ссылка на аватар"
+              required
+            />
+
+            <span class="form__input-error avatar-input-error"></span>
+          </label>
+
+          <button
+            type="submit"
+            class="form__save-button"
+            id="avatar-button-save"
+          >
+            Сохранить
+          </button>
+        </form>
+      </div>
+    </div>
 
     <!--Попап увеличение изображения-->
     <div class="popup popup-image">
@@ -125,5 +191,6 @@
     </div>
 
     <script src="scripts/script.js"></script>
+    <!-- <script src="./scripts/validate.js"></script> -->
   </body>
 </html>
