--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
         <img src="#" alt="Картинка" class="element__img" />
         <div class="element__info">
           <h2 class="element__title"></h2>
-          <button type="button" class="element__like"></button>
+          <div class="elements__like-container">
+            <button type="button" class="element__like"></button>
+            <span class="element__like-counter">0</span>
+          </div>
         </div>
       </li>
     </template>
@@ -151,7 +154,7 @@
           type="button"
           class="popup__close-icon"
         ></button>
-        <form name="ava" class="form form__add" id="avatar-form" novalidate>
+        <form name="ava" class="form form__avatar" id="avatar-form" novalidate>
           <h2 class="form__text">Обновить аватар</h2>
           <label class="form__field">
             <input
@@ -190,7 +193,7 @@
       </div>
     </div>
 
-    <script src="scripts/script.js"></script>
-    <!-- <script src="./scripts/validate.js"></script> -->
+    <script src="scripts/index.js"></script>
+    <!-- <script src="scripts/cards.js"></script> -->
   </body>
 </html>
