--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
           <h2 class="element__title"></h2>
           <div class="elements__like-container">
             <button type="button" class="element__like"></button>
-            <span class="element__like-counter">0</span>
+            <span class="element__like-counter"></span>
           </div>
         </div>
       </li>
@@ -182,7 +182,6 @@
         <p class="popup-image__text"></p>
       </div>
     </div>
-  
 
     <!-- <script src="./scripts/index.js" type="module"></script> -->
     <!-- <script src="scripts/cards.js"></script> -->
